add image post function
